[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
authors = ["Marvinesc3 <Marvinesc3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.0"